native/include/photon/photon.h

/* ------------------------------------------------------------------------ */
/* Scalars                                                                    */
/* ------------------------------------------------------------------------ */

/** 0 = false, non-zero = true. Never use C `bool` across the boundary. */
typedef int32_t ph_bool;
/**
 * Packed RGBA, one byte per channel, red in the most significant byte:
 * 0xRRGGBBAA. Bindings can compute this without calling us.
 *
 * PH_COLOR_AUTO (0 — transparent black) means "let the theme or palette
 * decide". Fully transparent black is never a useful explicit color, so it is
 * free to spend as the sentinel.
 */
typedef uint32_t ph_color;
/** Inclusive data-space interval. */
typedef struct ph_range {
  double lo;
  double hi;
} ph_range;
/** Mirrors core `RenderType` — the GL buffer-usage hint. */
typedef int32_t ph_render_type;
typedef int32_t ph_theme;
/* ------------------------------------------------------------------------ */
/* Colormaps and palettes                                                     */
/* ------------------------------------------------------------------------ */

/**
 * How a layer asks for a continuous colormap.
 *
 * `name` is a built-in ("viridis", "plasma", "inferno", "magma", "cividis",
 * "turbo", "grayscale", "coolwarm", "RdBu", "BrBG", "spectral", "twilight") or
 * anything passed to ph_colormap_register. Unknown names — and NULL — resolve to
 * viridis rather than failing, because a chart that draws in the wrong colours
 * is easier to notice than one that does not draw.
 *
 * `stops` overrides the name with anchors given inline, spaced evenly and
 * interpolated linearly. Their alpha is ignored; a colormap carries no opacity.
 */
typedef struct ph_colormap_spec {
  uint32_t        struct_size;
  const char*     name;
  const ph_color* stops;
  int32_t         stop_count;
  /** High values take the low end's colour. */
  ph_bool         reverse;
  /** 0 is continuous; otherwise the ramp is flattened into this many bands. */
  int32_t         discrete_steps;
} ph_colormap_spec;
/* ------------------------------------------------------------------------ */
/* 3-D                                                                        */
/* ------------------------------------------------------------------------ */

/*
 * A 3-D plot is its own type, which is the opposite of the decision polar got.
 * The reason is the same in both cases: what actually differs. Polar differs in
 * the grid and the projection and nothing else. This differs in every one of
 * them — the camera, the depth test, the vertex format, what a "layer" even is
 * — so sharing ph_plot would mean a plot whose every call had two behaviours.
 *
 * Layers still use ph_layer, from the same table, so ph_layer_set_visible and
 * ph_layer_destroy work on a 3-D layer exactly as they do on a 2-D one.
 */

/** How a data extent is mapped into the view cube. */
typedef int32_t ph_aspect_mode;
/** Camera projection. */
typedef int32_t ph_projection;
typedef struct ph_plot3d_desc {
  uint32_t       struct_size;
  int32_t        width;
  int32_t        height;
  ph_theme       theme;
  /** Scene background. PH_COLOR_AUTO takes the theme's. */
  ph_color       background;
  const char*    title;
  /** Axis titles along the x, y (height) and z edges. */
  const char*    x_label;
  const char*    y_label;
  const char*    z_label;
  /** Orbit angle in radians. 0 means 0.7, the core's default. */
  double         azimuth;
  /** Elevation in radians, clamped to +/-1.5. 0 means 0.5. */
  double         elevation;
  /** Eye distance, or the visible half-height under an orthographic camera.
   *  0 means 3.6. */
  double         distance;
  ph_aspect_mode aspect_mode;
  ph_projection  projection;
  /** The bounding box, its ticks and its labels are drawn unless this is set. */
  ph_bool        no_axes;
  /** Grid lines on the back walls of the cube are drawn unless this is set. */
  ph_bool        no_grid_planes;
  /** Drag to orbit and wheel to dolly are on unless this is set. */
  ph_bool        no_interaction;
} ph_plot3d_desc;
/** Mirrors core `SurfaceOptions`: a height grid, lit and colour-mapped. */
typedef struct ph_surface_desc {
  uint32_t                struct_size;
  /** Row-major heights, `cols * rows`. */
  const double*           values;
  int32_t                 cols;
  int32_t                 rows;
  /** World footprint. An empty range means 0..cols-1 / 0..rows-1. */
  ph_range                x;
  ph_range                z;
  const ph_colormap_spec* colormap;
  /** Value range the ramp covers. Empty measures it from the data. */
  ph_range                domain;
  /** Draw the grid as lines instead of a lit filled surface. */
  ph_bool                 wireframe;
  const char*             name;
  ph_render_type          render_type;
} ph_surface_desc;
/** Mirrors core `PointCloudOptions`. */
typedef struct ph_pointcloud_desc {
  uint32_t                struct_size;
  const double*           x;
  const double*           y;
  const double*           z;
  int32_t                 count;
  /** Point diameter in pixels. 0 means 4. */
  float                   size;
  ph_color                color;
  /** One value per point through `colormap`. NULL uses the flat colour. */
  const double*           values;
  const ph_colormap_spec* colormap;
  ph_range                domain;
  const char*             name;
  ph_render_type          render_type;
} ph_pointcloud_desc;
/** Mirrors core `Line3DOptions`: a polyline through space. */
typedef struct ph_line3d_desc {
  uint32_t       struct_size;
  const double*  x;
  const double*  y;
  const double*  z;
  int32_t        count;
  ph_color       color;
  const char*    name;
  ph_render_type render_type;
} ph_line3d_desc;
/** Mirrors core `Bar3DOptions`: one lit box per cell of a grid. */
typedef struct ph_bar3d_desc {
  uint32_t                struct_size;
  /** Row-major heights, `cols * rows`. */
  const double*           values;
  int32_t                 cols;
  int32_t                 rows;
  ph_range                x;
  ph_range                z;
  /** Bar footprint as a fraction of the cell. 0 means 0.8. */
  double                  fill;
  const ph_colormap_spec* colormap;
  ph_range                domain;
  const char*             name;
  ph_render_type          render_type;
} ph_bar3d_desc;
/** Mirrors core `Quiver3DOptions`: an arrow per sample, drawn as line segments. */
typedef struct ph_quiver3d_desc {
  uint32_t                struct_size;
  const double*           x;
  const double*           y;
  const double*           z;
  const double*           u;
  const double*           v;
  const double*           w;
  int32_t                 count;
  /** Multiplier on the vector length. 0 means 1. */
  double                  scale;
  ph_color                color;
  /** Colour by magnitude through a ramp instead of the flat colour. */
  ph_bool                 color_by_magnitude;
  const ph_colormap_spec* colormap;
  const char*             name;
  ph_render_type          render_type;
} ph_quiver3d_desc;
/**
 * Mirrors core `Contour3DOptions`: iso-height lines of a grid, each drawn at
 * its own level so they stack into a floating topographic map.
 */
typedef struct ph_contour3d_desc {
  uint32_t                struct_size;
  /** Row-major heights, `cols * rows`. */
  const double*           values;
  int32_t                 cols;
  int32_t                 rows;
  ph_range                x;
  ph_range                z;
  /** Evenly-spaced level count. 0 means 10, and is ignored when `level_values` is set. */
  int32_t                 levels;
  /** An explicit level list, which beats `levels`. */
  const double*           level_values;
  int32_t                 level_count;
  /** One colour for every line. PH_COLOR_AUTO colours each level by its value. */
  ph_color                color;
  const ph_colormap_spec* colormap;
  const char*             name;
  ph_render_type          render_type;
} ph_contour3d_desc;
/** One axis-aligned cuboid: a centre and a full size on each axis. */
typedef struct ph_box3d {
  double   x;
  double   y;
  double   z;
  double   w;
  double   h;
  double   d;
  /** PH_COLOR_AUTO falls back to the layer's colour. */
  ph_color color;
} ph_box3d;
/**
 * Mirrors core `Boxes3DOptions`: lit cuboids, for a voxel scene or a schematic.
 *
 * An opacity below 1 blends without depth sorting, so overlapping translucent
 * boxes can composite out of order — the same caveat the web core carries.
 */
typedef struct ph_boxes3d_desc {
  uint32_t         struct_size;
  const ph_box3d*  boxes;
  int32_t          count;
  /** Fill for boxes that carry no colour of their own. */
  ph_color         color;
  float            opacity;
  const char*      name;
  ph_render_type   render_type;
} ph_boxes3d_desc;
/**
 * Mirrors core `IsosurfaceOptions`: the level set of a scalar volume, extracted
 * by marching cubes and drawn as a lit mesh.
 *
 * `values` is `nx * ny * nz` with x varying fastest. A corner counts as inside
 * when its value is *below* `level`, which is the convention the tables were
 * written for; normals come from the volume's own gradient, so the surface
 * shades smoothly rather than showing the lattice it was cut from.
 */
typedef struct ph_isosurface_desc {
  uint32_t       struct_size;
  const double*  values;
  int32_t        nx;
  int32_t        ny;
  int32_t        nz;
  /** World extent of the grid. An empty range means 0..n-1. */
  ph_range       x;
  ph_range       y;
  ph_range       z;
  double         level;
  ph_color       color;
  const char*    name;
  ph_render_type render_type;
} ph_isosurface_desc;