native/bindings/csharp/Photon.g.cs


    /// <summary>ph_plot3d_desc — 104 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_plot3d_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 4</summary>
        public int width;
        /// <summary>offset 8</summary>
        public int height;
        /// <summary>offset 12</summary>
        public int theme;
        /// <summary>offset 16</summary>
        public uint background;
        /// <summary>offset 24</summary>
        public IntPtr title;
        /// <summary>offset 32</summary>
        public IntPtr x_label;
        /// <summary>offset 40</summary>
        public IntPtr y_label;
        /// <summary>offset 48</summary>
        public IntPtr z_label;
        /// <summary>offset 56</summary>
        public double azimuth;
        /// <summary>offset 64</summary>
        public double elevation;
        /// <summary>offset 72</summary>
        public double distance;
        /// <summary>offset 80</summary>
        public int aspect_mode;
        /// <summary>offset 84</summary>
        public int projection;
        /// <summary>offset 88</summary>
        public int no_axes;
        /// <summary>offset 92</summary>
        public int no_grid_planes;
        /// <summary>offset 96</summary>
        public int no_interaction;
    }

    /// <summary>ph_surface_desc — 104 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_surface_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr values;
        /// <summary>offset 16</summary>
        public int cols;
        /// <summary>offset 20</summary>
        public int rows;
        /// <summary>offset 24</summary>
        public ph_range x;
        /// <summary>offset 40</summary>
        public ph_range z;
        /// <summary>offset 56</summary>
        public IntPtr colormap;
        /// <summary>offset 64</summary>
        public ph_range domain;
        /// <summary>offset 80</summary>
        public int wireframe;
        /// <summary>offset 88</summary>
        public IntPtr name;
        /// <summary>offset 96</summary>
        public int render_type;
    }

    /// <summary>ph_pointcloud_desc — 96 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_pointcloud_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr y;
        /// <summary>offset 24</summary>
        public IntPtr z;
        /// <summary>offset 32</summary>
        public int count;
        /// <summary>offset 36</summary>
        public float size;
        /// <summary>offset 40</summary>
        public uint color;
        /// <summary>offset 48</summary>
        public IntPtr values;
        /// <summary>offset 56</summary>
        public IntPtr colormap;
        /// <summary>offset 64</summary>
        public ph_range domain;
        /// <summary>offset 80</summary>
        public IntPtr name;
        /// <summary>offset 88</summary>
        public int render_type;
    }

    /// <summary>ph_line3d_desc — 56 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_line3d_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr y;
        /// <summary>offset 24</summary>
        public IntPtr z;
        /// <summary>offset 32</summary>
        public int count;
        /// <summary>offset 36</summary>
        public uint color;
        /// <summary>offset 40</summary>
        public IntPtr name;
        /// <summary>offset 48</summary>
        public int render_type;
    }

    /// <summary>ph_bar3d_desc — 104 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_bar3d_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr values;
        /// <summary>offset 16</summary>
        public int cols;
        /// <summary>offset 20</summary>
        public int rows;
        /// <summary>offset 24</summary>
        public ph_range x;
        /// <summary>offset 40</summary>
        public ph_range z;
        /// <summary>offset 56</summary>
        public double fill;
        /// <summary>offset 64</summary>
        public IntPtr colormap;
        /// <summary>offset 72</summary>
        public ph_range domain;
        /// <summary>offset 88</summary>
        public IntPtr name;
        /// <summary>offset 96</summary>
        public int render_type;
    }

    /// <summary>ph_quiver3d_desc — 104 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_quiver3d_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr y;
        /// <summary>offset 24</summary>
        public IntPtr z;
        /// <summary>offset 32</summary>
        public IntPtr u;
        /// <summary>offset 40</summary>
        public IntPtr v;
        /// <summary>offset 48</summary>
        public IntPtr w;
        /// <summary>offset 56</summary>
        public int count;
        /// <summary>offset 64</summary>
        public double scale;
        /// <summary>offset 72</summary>
        public uint color;
        /// <summary>offset 76</summary>
        public int color_by_magnitude;
        /// <summary>offset 80</summary>
        public IntPtr colormap;
        /// <summary>offset 88</summary>
        public IntPtr name;
        /// <summary>offset 96</summary>
        public int render_type;
    }

    /// <summary>ph_contour3d_desc — 104 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_contour3d_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr values;
        /// <summary>offset 16</summary>
        public int cols;
        /// <summary>offset 20</summary>
        public int rows;
        /// <summary>offset 24</summary>
        public ph_range x;
        /// <summary>offset 40</summary>
        public ph_range z;
        /// <summary>offset 56</summary>
        public int levels;
        /// <summary>offset 64</summary>
        public IntPtr level_values;
        /// <summary>offset 72</summary>
        public int level_count;
        /// <summary>offset 76</summary>
        public uint color;
        /// <summary>offset 80</summary>
        public IntPtr colormap;
        /// <summary>offset 88</summary>
        public IntPtr name;
        /// <summary>offset 96</summary>
        public int render_type;
    }

    /// <summary>ph_box3d — 56 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_box3d
    {
        /// <summary>offset 0</summary>
        public double x;
        /// <summary>offset 8</summary>
        public double y;
        /// <summary>offset 16</summary>
        public double z;
        /// <summary>offset 24</summary>
        public double w;
        /// <summary>offset 32</summary>
        public double h;
        /// <summary>offset 40</summary>
        public double d;
        /// <summary>offset 48</summary>
        public uint color;
    }

    /// <summary>ph_boxes3d_desc — 48 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_boxes3d_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr boxes;
        /// <summary>offset 16</summary>
        public int count;
        /// <summary>offset 20</summary>
        public uint color;
        /// <summary>offset 24</summary>
        public float opacity;
        /// <summary>offset 32</summary>
        public IntPtr name;
        /// <summary>offset 40</summary>
        public int render_type;
    }

    /// <summary>ph_isosurface_desc — 112 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_isosurface_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr values;
        /// <summary>offset 16</summary>
        public int nx;
        /// <summary>offset 20</summary>
        public int ny;
        /// <summary>offset 24</summary>
        public int nz;
        /// <summary>offset 32</summary>
        public ph_range x;
        /// <summary>offset 48</summary>
        public ph_range y;
        /// <summary>offset 64</summary>
        public ph_range z;
        /// <summary>offset 80</summary>
        public double level;
        /// <summary>offset 88</summary>
        public uint color;
        /// <summary>offset 96</summary>
        public IntPtr name;
        /// <summary>offset 104</summary>
        public int render_type;
    }
